Refactor UI, continue adding logic

--- a/app/src/main/res/layout/fragment_org_repo.xml
+++ b/app/src/main/res/layout/fragment_org_repo.xml
@@ -1,7 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.OrgRepoFragment" />
+    android:background="@color/grey_main"
+    tools:context=".ui.fragments.OrgRepoFragment">
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilSearchOrgRepos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search repo"
+        android:textColorHint="@color/grey_dark_text"
+        app:hintAnimationEnabled="false"
+        app:layout_constraintBottom_toTopOf="@id/rvOrgRepos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/etSearchOrgRepos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/grey_bar"
+            android:imeOptions="actionSearch"
+            android:importantForAutofill="no"
+            android:inputType="textNoSuggestions"
+            android:textColor="@color/grey_light_text"
+            tools:text="google" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvOrgRepos"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@id/loadPageBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tilSearchOrgRepos"
+        tools:listitem="@layout/repo_item" />
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/loadPageBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvOrgRepos" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
